--- a/SCUBAsia/custom_styling.css
+++ b/SCUBAsia/custom_styling.css
@@ -5,3 +5,17 @@
 .navbar, .container {
     font-family: 'Permanent Marker';
 }
+
+/*.landing-page {
+ background-image: url("./media/homepage2.jpeg");
+ background-size:cover
+}*/
+
+
+
+@media only screen and (max-width: 700px) {
+ .peta {
+  width: 200px; 
+  height: 100px;
+ }
+}
