--- a/SCUBAsia/custom_styling.css
+++ b/SCUBAsia/custom_styling.css
@@ -6,11 +6,15 @@
     font-family: 'Permanent Marker';
 }
 
-/*.landing-page {
- background-image: url("./media/homepage2.jpeg");
- background-size:cover
-}*/
 
+
+/*.sipadan-image {
+   background-image: url("./media/sipadan.jpeg");
+   width:10vw;
+   height:30vh;
+   text-align: center;
+} 
+*/
 
 
 @media only screen and (max-width: 700px) {
